tests/integration/tests/invalid_input/05_one_newline_symbol_input/sample.itest
; RUN: printf "\n" | %expect_exit 0 --expect-no-content %FILECHECK_EXEC "%S/filecheck.check" 2>&1
